--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
    <div class="wrapper">
         <div class="container">
-            <h1>Merry Christmas OG's</h1>
+            <h1>Merry Christmas</h1>
             <img src="https://media.tenor.com/EUdelZi66eEAAAAM/elf-merry-christmas.gif" alt="Merry Christmas OG">
             <p>From: Developer: Michael Z. Sabino</p>
         </div>
